# energy-atlas-ai

./: .example.env  .gitignore  LICENSE  Makefile  README.md  answer_builder.py  executer.py  pyproject.toml  stress-test-questions.md
.chainlit/: config.toml
agents/: agent_policy.py  energy_atlas_agent.py  filter_resolvers.py  guardrails.py  llm_query_parser.py  llm_router.py  metric_capabilities.py  query_classifier.py  router.py  router_data.py  router_keywords.py  scoring_policy.py  source_planner.py  window_policy.py
answers/: chart_defaults.py  chart_policy.py  features.py
app/: manage.py
atlas/: __init__.py
chainlit/: app.py
charts/: plotly_renderer.py
docker/: Caddyfile  Caddyfile.production  Dockerfile.chainlit  Dockerfile.django  Dockerfile.django.production  Dockerfile.scheduler  docker-compose.production.yml  docker-compose.yml
docs/: des_integration.md
public/: custom.css  custom.js
scheduler/: crontab  run.sh  run_eia_reports.sh
schemas/: answer.py  chart_spec.py
scripts/: bootstrap.sh  parse_llm_query.py  update.sh
tests/: test_answer_builder.py  test_cftc_adapter.py  test_cftc_routing.py  test_chainlit_guardrails.py  test_chart_policy.py  test_cron_healthcheck.py  test_dates.py  test_des_features.py  test_des_historical.py  test_des_integration.py  test_des_reports.py  test_eia_report_retrieval.py  test_eia_sector_consumption.py  test_eia_underground_storage_adapter.py  test_eia_weather.py  test_eia_weather_forecast.py  test_energy_atlas_agent.py  test_executor.py  test_filter_resolvers.py  test_forecasting.py  test_llm_router.py  (+11 more)
(+111 files in other folders)
