[tool.poetry]
name = "energy-atlas-ai"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
chainlit = "^2.9.6"
llama-index = "^0.14.12"
openai = "^2.15.0"
eia-ng-client = "^0.1.4"
python-dotenv = "^1.2.1"
pandas = "^2.3.3"
google-api-python-client = "^2.189.0"
google-auth = "^2.48.0"
google-auth-httplib2 = "^0.3.0"
plotly = "^6.5.2"
openpyxl = "^3.1.5"
requests = "^2.32.5"
pyarrow = "^23.0.1"
gridstatus = "^0.34.0"
django = "^6.0.3"
celery = "^5.5.3"
dj-database-url = "^3.1.2"
django-configurations = "^2.5.1"
django-admin-colors = "^0.2.0"
django-ses = "^4.7.2"
dj-stripe = "^2.10.3"
ipywidgets = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [tool.setuptools.packages.find]
# where = ["."]
